[gd_scene load_steps=12 format=2]

[ext_resource path="res://images/man/man12f_cl.jpg" type="Texture2D" id=1]
[ext_resource path="res://addons/egoventure/nodes/hotspots/hotspot.gd" type="Script" id=2]
[ext_resource path="res://scenes/man/man12f_cl.gd" type="Script" id=3]
[ext_resource path="res://images/man/hs/bur_1.png" type="Texture2D" id=4]
[ext_resource path="res://images/man/hs/bur_6.png" type="Texture2D" id=5]
[ext_resource path="res://images/man/hs/bur_k.png" type="Texture2D" id=6]
[ext_resource path="res://images/man/hs/bur_7b.png" type="Texture2D" id=7]
[ext_resource path="res://images/man/hs/bur_b.png" type="Texture2D" id=8]
[ext_resource path="res://images/man/hs/bur_j.png" type="Texture2D" id=9]
[ext_resource path="res://images/man/hs/bur_7a.png" type="Texture2D" id=10]
[ext_resource path="res://sounds/man/man_1776_op.ogg" type="AudioStream" id=11]

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource( 1 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Hotspot" type="TextureButton" parent="."]
offset_left = -6.34961
offset_top = 1127.06
offset_right = 2608.65
offset_bottom = 1475.06
mouse_default_cursor_shape = 6
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 2
target_scene = "res://scenes/man/man12.tscn"
target_view = "left"

[node name="bur_j" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 9 )
centered = false
offset = Vector2( 827, 448 )

[node name="bur_1" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false
offset = Vector2( 821, 774 )

[node name="bur_k" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 6 )
centered = false
offset = Vector2( 1086, 431 )

[node name="bur_b" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 8 )
centered = false
offset = Vector2( 1453, 407 )

[node name="bur_7a" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 10 )
centered = false
offset = Vector2( 957, 762 )

[node name="bur_7b" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 7 )
centered = false
offset = Vector2( 1217, 766 )

[node name="bur_6" type="Sprite2D" parent="."]
visible = false
texture = ExtResource( 5 )
centered = false
offset = Vector2( 1478, 768 )

[node name="Hotspot2" type="TextureButton" parent="."]
offset_left = 830.0
offset_top = 451.0
offset_right = 1059.0
offset_bottom = 748.0
mouse_default_cursor_shape = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot3" type="TextureButton" parent="."]
offset_left = 1101.49
offset_top = 436.041
offset_right = 1376.49
offset_bottom = 766.041
mouse_default_cursor_shape = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot4" type="TextureButton" parent="."]
offset_left = 966.0
offset_top = 768.0
offset_right = 1187.0
offset_bottom = 1067.0
mouse_default_cursor_shape = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot5" type="TextureButton" parent="."]
offset_left = 1231.0
offset_top = 780.0
offset_right = 1433.0
offset_bottom = 1069.0
mouse_default_cursor_shape = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot6" type="TextureButton" parent="."]
offset_left = 1464.0
offset_top = 422.0
offset_right = 1738.0
offset_bottom = 749.0
mouse_default_cursor_shape = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot7" type="TextureButton" parent="."]
offset_left = 1465.0
offset_top = 775.0
offset_right = 1646.0
offset_bottom = 1071.0
mouse_default_cursor_shape = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="Hotspot8" type="TextureButton" parent="."]
offset_left = 781.0
offset_top = 771.0
offset_right = 925.0
offset_bottom = 1057.0
mouse_default_cursor_shape = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12

[node name="man_hand_on_bur" type="TextureButton" parent="."]
offset_left = 262.0
offset_top = 224.0
offset_right = 2288.0
offset_bottom = 1161.0
mouse_default_cursor_shape = 13
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
cursor_type = 12
target_scene = "res://scenes/man/man12f_op.tscn"
effect = ExtResource( 11 )

[connection signal="pressed" from="Hotspot2" to="." method="_on_Hotspot2_pressed"]
[connection signal="pressed" from="Hotspot3" to="." method="_on_Hotspot3_pressed"]
[connection signal="pressed" from="Hotspot4" to="." method="_on_Hotspot4_pressed"]
[connection signal="pressed" from="Hotspot5" to="." method="_on_Hotspot5_pressed"]
[connection signal="pressed" from="Hotspot6" to="." method="_on_Hotspot6_pressed"]
[connection signal="pressed" from="Hotspot7" to="." method="_on_Hotspot7_pressed"]
[connection signal="pressed" from="Hotspot8" to="." method="_on_Hotspot8_pressed"]
